Add condition variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ if(${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 endif()
 
 project(mpmt
-	VERSION 0.2.0
+	VERSION 1.0.0
+	DESCRIPTION "An open-source multi-platform multi-threading library"
+	HOMEPAGE_URL "https://github.com/cfnptr/mpmt"
 	LANGUAGES C)
 
 set(CMAKE_C_STANDARD 99)
@@ -16,6 +18,7 @@ configure_file(
 	mpmt/defines.h)
 
 add_library(mpmt STATIC
+	source/mpmt/condition_variable.c
 	source/mpmt/mutex.c
 	source/mpmt/thread.c)
 target_include_directories(mpmt PUBLIC
