Fix linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,15 @@ if(${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 endif()
 
 project(mpmt
-	VERSION 1.6.0
+	VERSION 0.7.0
 	DESCRIPTION "Multi-platform multi-threading library"
 	HOMEPAGE_URL "https://github.com/cfnptr/mpmt"
 	LANGUAGES C)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED TRUE)
+
+find_package(Threads REQUIRED)
 
 configure_file(
 	cmake/defines.h.in
@@ -20,6 +22,9 @@ configure_file(
 add_library(mpmt STATIC
 	source/mpmt/mutex.c
 	source/mpmt/thread.c)
+target_link_libraries(mpmt PUBLIC
+	Threads::Threads)
 target_include_directories(mpmt PUBLIC
 	${PROJECT_BINARY_DIR}
-	${PROJECT_SOURCE_DIR}/include)
+	${PROJECT_SOURCE_DIR}/include
+	${CMAKE_THREAD_LIBS_INIT})
