--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ configure_file(
 	mpmt/defines.h)
 
 add_library(mpmt STATIC
-	source/mpmt/mutex.c
-	source/mpmt/thread.c)
+	source/mutex.c
+	source/thread.c)
 target_link_libraries(mpmt PUBLIC
 	Threads::Threads)
 target_include_directories(mpmt PUBLIC
